--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "http://star-learning.github.io"
 
 # ------------ The following options are not recommended to be modified ------------------
 
