--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 # Import the theme
 theme: jekyll-theme-chirpy
-plugins:
-  - jekyll-remote-theme  # 必须保留
+# plugins:
+#   - jekyll-remote-theme  # 必须保留
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
@@ -151,7 +151,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "/Star-Learning"
 
 # ------------ The following options are not recommended to be modified ------------------
 
