--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone:
 
 title: 续兴/xuxing # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Seize The Day ＆ Pursue Happiness. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -38,7 +38,7 @@ social:
   email: 994091261@qq.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
+    # - https://twitter.com/username # change to your Twitter homepage
     - https://github.com/Star-Learning # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
